--- a/requests-json-nlp.ipynb
+++ b/requests-json-nlp.ipynb
@@ -129,19 +129,48 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<span style='color:teal'> Module 4, Question 1</span>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "1. The following code accesses the [lyrics.ovh](https://lyricsovh.docs.apiary.io/#reference/0/lyrics-of-a-song/search) public api, searches for the lyrics of a song, and stores it in a dictionary object.  Write the resulting json to a file (either a JSON file or a pickle file; you choose). You will read in the contents of this file for future questions so we do not need to frequently access the API."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "JSON data has been saved to lyrics_data.json.\n"
+     ]
+    }
+   ],
    "source": [
     "import requests\n",
     "import json\n",
     "\n",
-    "result = json.loads(requests.get('https://api.lyrics.ovh/v1/They Might Be Giants/Birdhouse in your soul').text)\n"
+    "response = requests.get('https://api.lyrics.ovh/v1/They Might Be Giants/Birdhouse in your soul')\n",
+    "\n",
+    "\n",
+    "if response.status_code == 200:\n",
+    "\n",
+    "    result = response.json()\n",
+    "\n",
+    "    filename = 'lyrics_data.json'\n",
+    "\n",
+    "    with open(filename, 'w') as file:\n",
+    "        json.dump(result, file)\n",
+    "\n",
+    "    print(f\"JSON data has been saved to {filename}.\")\n",
+    "else:\n",
+    "    print(\"Failed to retrieve data from the API.\")\n"
    ]
   },
   {
@@ -150,13 +179,6 @@
    "source": [
     "2. Read in the contents of your file.  Print the lyrics of the song (not the entire dictionary!) and use spaCyTextBlob to perform sentiment analysis on the lyrics.  Print the polarity score of the sentiment analysis.  Given that the range of the polarity score is `[-1.0,1.0]` which corresponds to how positive or negative the text in question is, do you think the lyrics have a more positive or negative connotaion?  Answer this question in a comment in your code cell."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
