--- a/requests-json-nlp.ipynb
+++ b/requests-json-nlp.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +177,184 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<span style='color:teal'> Module 4, Question 2</span>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "2. Read in the contents of your file.  Print the lyrics of the song (not the entire dictionary!) and use spaCyTextBlob to perform sentiment analysis on the lyrics.  Print the polarity score of the sentiment analysis.  Given that the range of the polarity score is `[-1.0,1.0]` which corresponds to how positive or negative the text in question is, do you think the lyrics have a more positive or negative connotaion?  Answer this question in a comment in your code cell."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Lyrics of the song:\n",
+      "Paroles de la chanson Birdhouse In Your Soul par They Might Be Giants\n",
+      "I'm Your Only Friend\n",
+      "\n",
+      "I'm Not Your Only Friend\n",
+      "\n",
+      "But I'm A Little Glowing Friend\n",
+      "\n",
+      "But Really I'm Not Actually Your Friend\n",
+      "\n",
+      "But I Am\n",
+      "\n",
+      "Blue Canary In The Outlet By The Light Switch\n",
+      "\n",
+      "Who Watches Over You\n",
+      "\n",
+      "Make A Little Birdhouse In Your Soul\n",
+      "\n",
+      "Not To Put Too Fine A Point On It\n",
+      "\n",
+      "Say I'm The Only Bee In Your Bonnet\n",
+      "\n",
+      "Make A Little Birdhouse In Your Soul\n",
+      "\n",
+      "I Have A Secret To Tell\n",
+      "\n",
+      "From My Electrical Well\n",
+      "\n",
+      "It's A Simple Message And I'm Leaving Out The Whistles And Bells\n",
+      "\n",
+      "So The Room Must Listen To Me\n",
+      "\n",
+      "\n",
+      "Filibuster Vigilantly\n",
+      "\n",
+      "My Name Is Blue Canary One Note Spelled Lite\n",
+      "\n",
+      "My Story's Infinite\n",
+      "\n",
+      "Like The Longines Symphonette It Doesn't Rest\n",
+      "\n",
+      "Blue Canary In The Outlet By The Light Switch\n",
+      "\n",
+      "Who Watches Over You\n",
+      "\n",
+      "Make A Little Birdhouse In Your Soul\n",
+      "\n",
+      "Not To Put Too Fine A Point On It\n",
+      "\n",
+      "Say I'm The Only Bee In Your Bonnet\n",
+      "\n",
+      "Make A Little Birdhouse In Your Soul\n",
+      "\n",
+      "I'm Your Only Friend\n",
+      "\n",
+      "I'm Not Your Only Friend\n",
+      "\n",
+      "But I'm A Little Glowing Friend\n",
+      "\n",
+      "But Really I'm Not Actually Your Friend\n",
+      "\n",
+      "But I Am\n",
+      "\n",
+      "There's A Picture Opposite Me\n",
+      "\n",
+      "Of My Primitive Ancestry\n",
+      "\n",
+      "Which Stood On Rocky Shores And Kept The Beaches Shipwreck Free\n",
+      "\n",
+      "\n",
+      "Though I Respect That A Lot\n",
+      "\n",
+      "I'd Be Fired If That Were My Job\n",
+      "\n",
+      "After Killing Jason Off And Countless Screaming Argonauts\n",
+      "\n",
+      "Bluebird Of Friendliness\n",
+      "\n",
+      "Like Guardian Angels Its Always Near\n",
+      "\n",
+      "Blue Canary In The Outlet By The Light Switch\n",
+      "\n",
+      "Who Watches Over You\n",
+      "\n",
+      "Make A Little Birdhouse In Your Soul\n",
+      "\n",
+      "Not To Put Too Fine A Point On It\n",
+      "\n",
+      "Say I'm The Only Bee In Your Bonnet\n",
+      "\n",
+      "Make A Little Birdhouse In Your Soul\n",
+      "\n",
+      "(And While You're At It\n",
+      "\n",
+      "Keep The Nightlight On Inside The\n",
+      "\n",
+      "Birdhouse In Your Soul)\n",
+      "\n",
+      "Not To Put Too Fine A Point On It\n",
+      "\n",
+      "Say I'm The Only Bee In Your Bonnet\n",
+      "\n",
+      "Make A Little Birdhouse In Your Soul\n",
+      "\n",
+      "\n",
+      "Blue Canary In The Outlet By The Light Switch (And While You're At It)\n",
+      "\n",
+      "Who Watches Over You (Keep The Nightlight On Inside The)\n",
+      "\n",
+      "Make A L\n",
+      "\n",
+      "Polarity score: 0.04\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "import spacy\n",
+    "from spacytextblob.spacytextblob import SpacyTextBlob\n",
+    "\n",
+    "# Load spaCy model with TextBlob capabilities\n",
+    "nlp = spacy.load(\"en_core_web_sm\")\n",
+    "nlp.add_pipe(\"spacytextblob\")\n",
+    "\n",
+    "# Read the contents of the JSON file\n",
+    "with open('lyrics_data.json', 'r') as file:\n",
+    "    data = json.load(file)\n",
+    "\n",
+    "# Extract the lyrics text from the JSON data\n",
+    "lyrics = data['lyrics']\n",
+    "\n",
+    "# Print the lyrics of the song\n",
+    "print(\"Lyrics of the song:\")\n",
+    "print(lyrics)\n",
+    "print()\n",
+    "\n",
+    "# Perform sentiment analysis on the lyrics\n",
+    "doc = nlp(lyrics)\n",
+    "\n",
+    "# Get the polarity score of the sentiment analysis\n",
+    "polarity_score = doc._.polarity\n",
+    "\n",
+    "# Truncate the polarity score to two decimal places\n",
+    "truncated_score = round(polarity_score, 2)\n",
+    "\n",
+    "# Print the truncated polarity score\n",
+    "print(\"Polarity score:\", truncated_score)\n",
+    "\n",
+    "# Answer to the question:\n",
+    "# Based on the polarity score:\n",
+    "# If truncated_score > 0, it indicates positive sentiment.\n",
+    "# If truncated_score < 0, it indicates negative sen\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<span style='color:teal'> Module 4, Question 3</span>"
    ]
   },
   {
@@ -189,10 +366,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Polarity score for 'Shape': 0.32\n",
+      "Polarity score for 'Shake': -0.49\n",
+      "Polarity score for 'Hello': -0.15\n",
+      "Polarity score for 'Just': 0.46\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define a function to perform sentiment analysis on song lyrics stored in a file and return the polarity score\n",
+    "def analyze_lyrics_sentiment(filename):\n",
+    "    \"\"\"\n",
+    "    Perform sentiment analysis on song lyrics stored in a file and return the polarity score.\n",
+    "\n",
+    "    Parameters:\n",
+    "        filename (str): The name of the file containing song lyrics.\n",
+    "\n",
+    "    Returns:\n",
+    "        float: The polarity score indicating the sentiment of the lyrics.\n",
+    "    \"\"\"\n",
+    "    # Load spaCy model with TextBlob capabilities\n",
+    "    nlp = spacy.load(\"en_core_web_sm\")\n",
+    "    nlp.add_pipe(\"spacytextblob\")\n",
+    "\n",
+    "    # Read the contents of the file\n",
+    "    with open(filename, 'r') as file:\n",
+    "        lyrics = file.read()\n",
+    "\n",
+    "    # Perform sentiment analysis on the lyrics\n",
+    "    doc = nlp(lyrics)\n",
+    "\n",
+    "    # Get the polarity score of the sentiment analysis\n",
+    "    polarity_score = doc._.polarity\n",
+    "\n",
+    "    return polarity_score\n",
+    "\n",
+    "# Test the function with the pop songs created in question 3\n",
+    "filename_list = [\n",
+    "    \"shape_of_you_lyrics.txt\",\n",
+    "    \"shake_it_off_lyrics.txt\",\n",
+    "    \"hello_lyrics.txt\",\n",
+    "    \"just_the_way_you_are_lyrics.txt\"\n",
+    "]\n",
+    "\n",
+    "for filename in filename_list:\n",
+    "    song_name = filename.split(\"_\")[0].title()  # Extract the song name from the filename\n",
+    "    polarity_score = analyze_lyrics_sentiment(filename)\n",
+    "    truncated_score = round(polarity_score, 2)  # Truncate the polarity score to two decimal places\n",
+    "    print(f\"Polarity score for '{song_name}': {truncated_score}\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<span style='color:teal'> Module 4, Question 4</span>"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -203,10 +440,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Polarity score for 'Shape': 0.32\n",
+      "Polarity score for 'Shake': -0.49\n",
+      "Polarity score for 'Hello': -0.15\n",
+      "Polarity score for 'Just': 0.46\n"
+     ]
+    }
+   ],
+   "source": [
+    "import spacy\n",
+    "from spacytextblob.spacytextblob import SpacyTextBlob\n",
+    "\n",
+    "def analyze_lyrics_sentiment(filename):\n",
+    "    \"\"\"\n",
+    "    Perform sentiment analysis on song lyrics stored in a file and return the polarity score.\n",
+    "\n",
+    "    Parameters:\n",
+    "        filename (str): The name of the file containing song lyrics.\n",
+    "\n",
+    "    Returns:\n",
+    "        float: The polarity score indicating the sentiment of the lyrics.\n",
+    "    \"\"\"\n",
+    "    # Load spaCy model with TextBlob capabilities\n",
+    "    nlp = spacy.load(\"en_core_web_sm\")\n",
+    "    nlp.add_pipe(\"spacytextblob\")\n",
+    "\n",
+    "    # Read the contents of the file\n",
+    "    with open(filename, 'r') as file:\n",
+    "        lyrics = file.read()\n",
+    "\n",
+    "    # Perform sentiment analysis on the lyrics\n",
+    "    doc = nlp(lyrics)\n",
+    "\n",
+    "    # Get the polarity score of the sentiment analysis\n",
+    "    polarity_score = doc._.polarity\n",
+    "\n",
+    "    # Truncate the polarity score to two decimal places\n",
+    "    truncated_score = round(polarity_score, 2)\n",
+    "\n",
+    "    return truncated_score\n",
+    "\n",
+    "# Test the function with the three files created in question 3\n",
+    "filename_list = [\n",
+    "    \"shape_of_you_lyrics.txt\",\n",
+    "    \"shake_it_off_lyrics.txt\",\n",
+    "    \"hello_lyrics.txt\",\n",
+    "    \"just_the_way_you_are_lyrics.txt\"\n",
+    "]\n",
+    "\n",
+    "for filename in filename_list:\n",
+    "    song_name = filename.split(\"_\")[0].title()  # Extract the song name from the filename\n",
+    "    polarity_score = analyze_lyrics_sentiment(filename)\n",
+    "    print(f\"Polarity score for '{song_name}': {polarity_score}\")\n"
+   ]
   },
   {
    "cell_type": "markdown",
