Convert to html

--- a/requests-json-nlp.ipynb
+++ b/requests-json-nlp.ipynb
@@ -381,7 +381,6 @@
     }
    ],
    "source": [
-    "# Define a function to perform sentiment analysis on song lyrics stored in a file and return the polarity score\n",
     "def analyze_lyrics_sentiment(filename):\n",
     "    \"\"\"\n",
     "    Perform sentiment analysis on song lyrics stored in a file and return the polarity score.\n",
@@ -392,23 +391,19 @@
     "    Returns:\n",
     "        float: The polarity score indicating the sentiment of the lyrics.\n",
     "    \"\"\"\n",
-    "    # Load spaCy model with TextBlob capabilities\n",
+    "\n",
     "    nlp = spacy.load(\"en_core_web_sm\")\n",
     "    nlp.add_pipe(\"spacytextblob\")\n",
     "\n",
-    "    # Read the contents of the file\n",
     "    with open(filename, 'r') as file:\n",
     "        lyrics = file.read()\n",
     "\n",
-    "    # Perform sentiment analysis on the lyrics\n",
     "    doc = nlp(lyrics)\n",
     "\n",
-    "    # Get the polarity score of the sentiment analysis\n",
     "    polarity_score = doc._.polarity\n",
     "\n",
     "    return polarity_score\n",
     "\n",
-    "# Test the function with the pop songs created in question 3\n",
     "filename_list = [\n",
     "    \"shape_of_you_lyrics.txt\",\n",
     "    \"shake_it_off_lyrics.txt\",\n",
@@ -417,9 +412,9 @@
     "]\n",
     "\n",
     "for filename in filename_list:\n",
-    "    song_name = filename.split(\"_\")[0].title()  # Extract the song name from the filename\n",
+    "    song_name = filename.split(\"_\")[0].title()  \n",
     "    polarity_score = analyze_lyrics_sentiment(filename)\n",
-    "    truncated_score = round(polarity_score, 2)  # Truncate the polarity score to two decimal places\n",
+    "    truncated_score = round(polarity_score, 2) \n",
     "    print(f\"Polarity score for '{song_name}': {truncated_score}\")\n",
     "\n"
    ]
@@ -499,6 +494,24 @@
     "    song_name = filename.split(\"_\")[0].title()  # Extract the song name from the filename\n",
     "    polarity_score = analyze_lyrics_sentiment(filename)\n",
     "    print(f\"Polarity score for '{song_name}': {polarity_score}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[NbConvertApp] Converting notebook requests-json-nlp.ipynb to html\n",
+      "[NbConvertApp] Writing 300734 bytes to requests-json-nlp.html\n"
+     ]
+    }
+   ],
+   "source": [
+    "!jupyter nbconvert --to html requests-json-nlp.ipynb\n"
    ]
   },
   {
