--- a/requests-json-nlp.ipynb
+++ b/requests-json-nlp.ipynb
@@ -316,35 +316,27 @@
     "import spacy\n",
     "from spacytextblob.spacytextblob import SpacyTextBlob\n",
     "\n",
-    "# Load spaCy model with TextBlob capabilities\n",
     "nlp = spacy.load(\"en_core_web_sm\")\n",
     "nlp.add_pipe(\"spacytextblob\")\n",
     "\n",
-    "# Read the contents of the JSON file\n",
     "with open('lyrics_data.json', 'r') as file:\n",
     "    data = json.load(file)\n",
     "\n",
-    "# Extract the lyrics text from the JSON data\n",
     "lyrics = data['lyrics']\n",
     "\n",
-    "# Print the lyrics of the song\n",
     "print(\"Lyrics of the song:\")\n",
     "print(lyrics)\n",
     "print()\n",
     "\n",
-    "# Perform sentiment analysis on the lyrics\n",
     "doc = nlp(lyrics)\n",
     "\n",
-    "# Get the polarity score of the sentiment analysis\n",
     "polarity_score = doc._.polarity\n",
     "\n",
-    "# Truncate the polarity score to two decimal places\n",
     "truncated_score = round(polarity_score, 2)\n",
     "\n",
-    "# Print the truncated polarity score\n",
     "print(\"Polarity score:\", truncated_score)\n",
     "\n",
-    "# Answer to the question:\n",
+    "# Answer\n",
     "# Based on the polarity score:\n",
     "# If truncated_score > 0, it indicates positive sentiment.\n",
     "# If truncated_score < 0, it indicates negative sen\n"
@@ -463,26 +455,21 @@
     "    Returns:\n",
     "        float: The polarity score indicating the sentiment of the lyrics.\n",
     "    \"\"\"\n",
-    "    # Load spaCy model with TextBlob capabilities\n",
+    "\n",
     "    nlp = spacy.load(\"en_core_web_sm\")\n",
     "    nlp.add_pipe(\"spacytextblob\")\n",
     "\n",
-    "    # Read the contents of the file\n",
     "    with open(filename, 'r') as file:\n",
     "        lyrics = file.read()\n",
     "\n",
-    "    # Perform sentiment analysis on the lyrics\n",
     "    doc = nlp(lyrics)\n",
     "\n",
-    "    # Get the polarity score of the sentiment analysis\n",
     "    polarity_score = doc._.polarity\n",
     "\n",
-    "    # Truncate the polarity score to two decimal places\n",
     "    truncated_score = round(polarity_score, 2)\n",
     "\n",
     "    return truncated_score\n",
     "\n",
-    "# Test the function with the three files created in question 3\n",
     "filename_list = [\n",
     "    \"shape_of_you_lyrics.txt\",\n",
     "    \"shake_it_off_lyrics.txt\",\n",
