--- a/requests-json-nlp.ipynb
+++ b/requests-json-nlp.ipynb
@@ -339,7 +339,7 @@
     "# Answer\n",
     "# Based on the polarity score:\n",
     "# If truncated_score > 0, it indicates positive sentiment.\n",
-    "# If truncated_score < 0, it indicates negative sen\n"
+    "# If truncated_score < 0, it indicates negative sentiment.\n"
    ]
   },
   {
