--- a/requests-json-nlp.ipynb
+++ b/requests-json-nlp.ipynb
@@ -427,17 +427,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Polarity score for 'Shape': 0.32\n",
-      "Polarity score for 'Shake': -0.49\n",
-      "Polarity score for 'Hello': -0.15\n",
-      "Polarity score for 'Just': 0.46\n"
+      "Song Name               | Polarity Score | Sentiment | Comments\n",
+      "=================================================================\n",
+      "Shape                  | 0.32| Positive | Positive - Yes, I agree that this song is positive.\n",
+      "Shake                  | -0.49| Negative | Negative - No, I thought this was a positive song.\n",
+      "Hello                  | -0.15| Negative | Neutral - No, I feel like this is more negative than neutral\n",
+      "Just                   | 0.46| Positive | Positive - Yes, I agree this is a positive song.\n"
      ]
     }
    ],
@@ -445,15 +447,16 @@
     "import spacy\n",
     "from spacytextblob.spacytextblob import SpacyTextBlob\n",
     "\n",
-    "def analyze_lyrics_sentiment(filename):\n",
+    "def analyze_lyrics_sentiment(filename, custom_comments=None):\n",
     "    \"\"\"\n",
     "    Perform sentiment analysis on song lyrics stored in a file and return the polarity score.\n",
     "\n",
     "    Parameters:\n",
     "        filename (str): The name of the file containing song lyrics.\n",
+    "        custom_comments (str, optional): Custom comments to be included in the table. Defaults to None.\n",
     "\n",
     "    Returns:\n",
-    "        float: The polarity score indicating the sentiment of the lyrics.\n",
+    "        tuple: A tuple containing the polarity score, sentiment (negative/positive), and comments.\n",
     "    \"\"\"\n",
     "\n",
     "    nlp = spacy.load(\"en_core_web_sm\")\n",
@@ -465,10 +468,32 @@
     "    doc = nlp(lyrics)\n",
     "\n",
     "    polarity_score = doc._.polarity\n",
+    "    sentiment = \"Negative\" if polarity_score < 0 else \"Positive\"\n",
+    "\n",
+    "    if polarity_score > 0.5:\n",
+    "        comments = \"Highly Positive\"\n",
+    "    elif polarity_score > 0.2:\n",
+    "        comments = \"Positive\"\n",
+    "    elif polarity_score < -0.5:\n",
+    "        comments = \"Highly Negative\"\n",
+    "    elif polarity_score < -0.2:\n",
+    "        comments = \"Negative\"\n",
+    "    else:\n",
+    "        comments = \"Neutral\"\n",
+    "\n",
+    "    if custom_comments:\n",
+    "        comments += f\" - {custom_comments}\"\n",
     "\n",
     "    truncated_score = round(polarity_score, 2)\n",
     "\n",
-    "    return truncated_score\n",
+    "    return truncated_score, sentiment, comments\n",
+    "\n",
+    "filename_custom_comments = {\n",
+    "    \"shape_of_you_lyrics.txt\": \"Yes, I agree that this song is positive.\",\n",
+    "    \"shake_it_off_lyrics.txt\": \"No, I thought this was a positive song.\",\n",
+    "    \"hello_lyrics.txt\": \"No, I feel like this is more negative than neutral\",\n",
+    "    \"just_the_way_you_are_lyrics.txt\": \"Yes, I agree this is a positive song.\"\n",
+    "}\n",
     "\n",
     "filename_list = [\n",
     "    \"shape_of_you_lyrics.txt\",\n",
@@ -477,10 +502,13 @@
     "    \"just_the_way_you_are_lyrics.txt\"\n",
     "]\n",
     "\n",
+    "print(\"Song Name               | Polarity Score | Sentiment | Comments\")\n",
+    "print(\"=\"*65)\n",
     "for filename in filename_list:\n",
-    "    song_name = filename.split(\"_\")[0].title()  # Extract the song name from the filename\n",
-    "    polarity_score = analyze_lyrics_sentiment(filename)\n",
-    "    print(f\"Polarity score for '{song_name}': {polarity_score}\")\n"
+    "    custom_comment = filename_custom_comments.get(filename, None)\n",
+    "    polarity_score, sentiment, comments = analyze_lyrics_sentiment(filename, custom_comments=custom_comment)\n",
+    "    song_name = filename.split(\"_\")[0].title()  \n",
+    "    print(f\"{song_name.ljust(23)}| {polarity_score}\".ljust(18) + f\"| {sentiment}\".ljust(11) + f\"| {comments}\")\n"
    ]
   },
   {
